--- a/career.html
+++ b/career.html
@@ -36,7 +36,7 @@
       <div class="collapse navbar-collapse">
         <ul class="nav navbar-nav navbar-right">
           <li><a href="index.html">Home</a></li>
-          <li><a href="about-us.html">About Us</a></li>
+          <li><a href="Nosotros.html">About Us</a></li>
           <li><a href="services.html">Services</a></li>
           <li><a href="portfolio.html">Portfolio</a></li>
           <li class="dropdown active">
@@ -54,7 +54,7 @@
             </ul>
           </li>
           <li><a href="blog.html">Blog</a></li> 
-          <li><a href="contact-us.html">Contact</a></li>
+          <li><a href="Contacto.html">Contact</a></li>
         </ul>
       </div>
     </div>
