--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
     <meta name="author" content="">
-    <title>Home | Flat Theme</title>
+    <title>Home | Metal Jardin</title>
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/font-awesome.min.css" rel="stylesheet">
     <link href="css/prettyPhoto.css" rel="stylesheet">
@@ -36,8 +36,8 @@
             <div class="collapse navbar-collapse">
                 <ul class="nav navbar-nav navbar-right">
                     <li class="active"><a href="index.html">Home</a></li>
-                    <li><a href="about-us.html">About Us</a></li>
-                    <li><a href="services.html">Services</a></li>
+                    <li><a href="Nosotros.html">Nosotros</a></li>
+                    <li><a href="services.html">Servicios</a></li>
                     <li><a href="portfolio.html">Portfolio</a></li>
                     <li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">Pages <i class="icon-angle-down"></i></a>
@@ -53,7 +53,7 @@
                         </ul>
                     </li>
                     <li><a href="blog.html">Blog</a></li> 
-                    <li><a href="contact-us.html">Contact</a></li>
+                    <li><a href="Contacto.html">Contacto</a></li>
                 </ul>
             </div>
         </div>
@@ -306,14 +306,14 @@
         </div>
     </section>/#testimonial-->
 
-    <section id="bottom" class="wet-asphalt">
+<!--    <section id="bottom" class="wet-asphalt">
         <div class="container">
             <div class="row">
                 <div class="col-md-3 col-sm-6">
                     <h4>About Us</h4>
                     <p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante.</p>
                     <p>Pellentesque habitant morbi tristique senectus.</p>
-                </div><!--/.col-md-3-->
+                </div>/.col-md-3
 
                 <div class="col-md-3 col-sm-6">
                     <h4>Company</h4>
@@ -330,7 +330,7 @@
                             <li><a href="#">Copyright</a></li>
                         </ul>
                     </div>
-                </div><!--/.col-md-3-->
+                </div>/.col-md-3
 
                 <div class="col-md-3 col-sm-6">
                     <h4>Latest Blog</h4>
@@ -363,7 +363,7 @@
                             </div>
                         </div>
                     </div>  
-                </div><!--/.col-md-3-->
+                </div>/.col-md-3
 
                 <div class="col-md-3 col-sm-6">
                     <h4>Address</h4>
@@ -382,10 +382,10 @@
                             </span>
                         </div>
                     </form>
-                </div> <!--/.col-md-3-->
+                </div> /.col-md-3
             </div>
         </div>
-    </section><!--/#bottom-->
+    </section>/#bottom-->
 
     <footer id="footer" class="midnight-blue">
         <div class="container">
@@ -396,9 +396,9 @@
                 <div class="col-sm-6">
                     <ul class="pull-right">
                         <li><a href="#">Home</a></li>
-                        <li><a href="#">About Us</a></li>
-                        <li><a href="#">Faq</a></li>
-                        <li><a href="#">Contact Us</a></li>
+                        <li><a href="Nosotros.html">Nosotros</a></li>
+                        <!--<li><a href="#">Faq</a></li>-->
+                        <li><a href="Contacto.html">Contacto</a></li>
                         <li><a id="gototop" class="gototop" href="#"><i class="icon-chevron-up"></i></a></li><!--#gototop-->
                     </ul>
                 </div>
