--- a/portfolio.html
+++ b/portfolio.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
     <meta name="author" content="">
-    <title>Portfolio | Flat Theme</title>
+    <title>Portfolio | Metal Jardin</title>
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/font-awesome.min.css" rel="stylesheet">
     <link href="css/prettyPhoto.css" rel="stylesheet">
@@ -36,8 +36,8 @@
             <div class="collapse navbar-collapse">
                 <ul class="nav navbar-nav navbar-right">
                     <li><a href="index.html">Home</a></li>
-                    <li><a href="about-us.html">About Us</a></li>
-                    <li><a href="services.html">Services</a></li>
+                    <li><a href="Nosotros.html">Nosotros</a></li>
+                    <li><a href="services.html">Servicios</a></li>
                     <li class="active"><a href="portfolio.html">Portfolio</a></li>
                     <li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">Pages <i class="icon-angle-down"></i></a>
@@ -54,13 +54,13 @@
                         </ul>
                     </li>
                     <li><a href="blog.html">Blog</a></li> 
-                    <li><a href="contact-us.html">Contact</a></li>
+                    <li><a href="Contacto.html">Contacto</a></li>
                 </ul>
             </div>
         </div>
     </header><!--/header-->
 
-    <section id="title" class="emerald">
+<!--    <section id="title" class="emerald">
         <div class="container">
             <div class="row">
                 <div class="col-sm-6">
@@ -75,7 +75,7 @@
                 </div>
             </div>
         </div>
-    </section><!--/#title--> 
+    </section>/#title -->
 
     <section id="portfolio" class="container">
         <ul class="portfolio-filter">
@@ -143,14 +143,14 @@
         </ul>
     </section><!--/#portfolio-->
 
-    <section id="bottom" class="wet-asphalt">
+<!--    <section id="bottom" class="wet-asphalt">
         <div class="container">
             <div class="row">
                 <div class="col-md-3 col-sm-6">
                     <h4>About Us</h4>
                     <p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante.</p>
                     <p>Pellentesque habitant morbi tristique senectus.</p>
-                </div><!--/.col-md-3-->
+                </div>/.col-md-3
 
                 <div class="col-md-3 col-sm-6">
                     <h4>Company</h4>
@@ -167,7 +167,7 @@
                             <li><a href="#">Copyright</a></li>
                         </ul>
                     </div>
-                </div><!--/.col-md-3-->
+                </div>/.col-md-3
 
                 <div class="col-md-3 col-sm-6">
                     <h4>Latest Blog</h4>
@@ -200,7 +200,7 @@
                             </div>
                         </div>
                     </div>  
-                </div><!--/.col-md-3-->
+                </div>/.col-md-3
 
                 <div class="col-md-3 col-sm-6">
                     <h4>Address</h4>
@@ -219,10 +219,10 @@
                             </span>
                         </div>
                     </form>
-                </div> <!--/.col-md-3-->
+                </div> /.col-md-3
             </div>
         </div>
-    </section><!--/#bottom-->
+    </section>/#bottom-->
 
     <footer id="footer" class="midnight-blue">
         <div class="container">
@@ -232,10 +232,10 @@
                 </div>
                 <div class="col-sm-6">
                     <ul class="pull-right">
-                        <li><a href="#">Home</a></li>
-                        <li><a href="#">About Us</a></li>
-                        <li><a href="#">Faq</a></li>
-                        <li><a href="#">Contact Us</a></li>
+                        <li><a href="index.html">Home</a></li>
+                        <li><a href="Nosotros.html">Nosotros</a></li>
+                        <!--<li><a href="#">Faq</a></li>-->
+                        <li><a href="Contacto.html">Contacto</a></li>
                         <li><a id="gototop" class="gototop" href="#"><i class="icon-chevron-up"></i></a></li><!--#gototop-->
                     </ul>
                 </div>
