--- a/404.html
+++ b/404.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
     <meta name="author" content="">
-    <title>404 | Flat Theme</title>
+    <title>404 | Metal Jardin</title>
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/font-awesome.min.css" rel="stylesheet">
     <link href="css/prettyPhoto.css" rel="stylesheet">
@@ -22,7 +22,7 @@
     <link rel="apple-touch-icon-precomposed" href="images/ico/apple-touch-icon-57-precomposed.png">
 </head><!--/head-->
 <body>
-    <header class="navbar navbar-inverse navbar-fixed-top wet-asphalt" role="banner">
+<!--    <header class="navbar navbar-inverse navbar-fixed-top wet-asphalt" role="banner">
         <div class="container">
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
@@ -31,14 +31,14 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="index.html"><img src="images/logo.png" alt="logo"></a>
+                <a class="navbar-brand" href="Index.html"><img src="images/logo.png" alt="logo"></a>
             </div>
             <div class="collapse navbar-collapse">
                 <ul class="nav navbar-nav navbar-right">
-                    <li><a href="index.html">Home</a></li>
+                    <li><a href="Index.html">Home</a></li>
                     <li><a href="Nosotros.html">About Us</a></li>
-                    <li><a href="services.html">Services</a></li>
-                    <li><a href="portfolio.html">Portfolio</a></li>
+                    <li><a href="Servicios.html">Services</a></li>
+                    <li><a href="Portfolio.html">Portfolio</a></li>
                     <li class="dropdown active">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">Pages <i class="icon-angle-down"></i></a>
                         <ul class="dropdown-menu">
@@ -53,27 +53,27 @@
                             <li><a href="terms.html">Terms of Use</a></li>
                         </ul>
                     </li>
-                    <li><a href="blog.html">Blog</a></li> 
+                    <li><a href="Blog.html">Blog</a></li> 
                     <li><a href="Contacto.html">Contact</a></li>
                 </ul>
             </div>
         </div>
-    </header><!--/header-->
+    </header>/header-->
 
     <section id="error" class="container">
         <h1>404, Page not found</h1>
         <p>The Page you are looking for doesn't exist or an other error occurred.</p>
-        <a class="btn btn-success" href="index.html">GO BACK TO THE HOMEPAGE</a>
+        <a class="btn btn-success" href="Index.html">Volver al Home</a>
     </section><!--/#error-->
 
-    <section id="bottom" class="wet-asphalt">
+<!--    <section id="bottom" class="wet-asphalt">
         <div class="container">
             <div class="row">
                 <div class="col-md-3 col-sm-6">
                     <h4>About Us</h4>
                     <p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante.</p>
                     <p>Pellentesque habitant morbi tristique senectus.</p>
-                </div><!--/.col-md-3-->
+                </div>/.col-md-3
 
                 <div class="col-md-3 col-sm-6">
                     <h4>Company</h4>
@@ -90,7 +90,7 @@
                             <li><a href="#">Copyright</a></li>
                         </ul>
                     </div>
-                </div><!--/.col-md-3-->
+                </div>/.col-md-3
 
                 <div class="col-md-3 col-sm-6">
                     <h4>Latest Blog</h4>
@@ -123,7 +123,7 @@
                             </div>
                         </div>
                     </div>  
-                </div><!--/.col-md-3-->
+                </div>/.col-md-3
 
                 <div class="col-md-3 col-sm-6">
                     <h4>Address</h4>
@@ -142,12 +142,12 @@
                             </span>
                         </div>
                     </form>
-                </div> <!--/.col-md-3-->
+                </div> /.col-md-3
             </div>
         </div>
-    </section><!--/#bottom-->
+    </section>/#bottom-->
 
-    <footer id="footer" class="midnight-blue">
+<!--    <footer id="footer" class="midnight-blue">
         <div class="container">
             <div class="row">
                 <div class="col-sm-6">
@@ -159,12 +159,12 @@
                         <li><a href="#">About Us</a></li>
                         <li><a href="#">Faq</a></li>
                         <li><a href="#">Contact Us</a></li>
-                        <li><a id="gototop" class="gototop" href="#"><i class="icon-chevron-up"></i></a></li><!--#gototop-->
+                        <li><a id="gototop" class="gototop" href="#"><i class="icon-chevron-up"></i></a></li>#gototop
                     </ul>
                 </div>
             </div>
         </div>
-    </footer><!--/#footer-->
+    </footer>/#footer-->
 
     <script src="js/jquery.js"></script>
     <script src="js/bootstrap.min.js"></script>
