--- a/Index.html
+++ b/Index.html
@@ -31,28 +31,28 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="index.html"><img src="images/logo.png" alt="logo"></a>
+                <a class="navbar-brand" href="Index.html"><img src="images/logo.png" alt="logo"></a>
             </div>
             <div class="collapse navbar-collapse">
                 <ul class="nav navbar-nav navbar-right">
-                    <li class="active"><a href="index.html">Home</a></li>
+                    <li class="active"><a href="Index.html">Home</a></li>
                     <li><a href="Nosotros.html">Nosotros</a></li>
-                    <li><a href="services.html">Servicios</a></li>
-                    <li><a href="portfolio.html">Portfolio</a></li>
+                    <li><a href="Servicios.html">Servicios</a></li>
+                    <li><a href="Portfolio.html">Portfolio</a></li>
                     <li class="dropdown">
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">Pages <i class="icon-angle-down"></i></a>
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">Catalogo <i class="icon-angle-down"></i></a>
                         <ul class="dropdown-menu">
-                            <li><a href="career.html">Career</a></li>
-                            <li><a href="blog-item.html">Blog Single</a></li>
-                            <li><a href="pricing.html">Pricing</a></li>
+                            <li><a href="career.html">Juegos Infantiles</a></li>
+                            <li><a href="blog-item.html">Desportes y Ejercicios</a></li>
+                            <li><a href="faq.html">Moviliario Urbano</a></li>
                             <li><a href="404.html">404</a></li>
-                            <li><a href="registration.html">Registration</a></li>
+                            <!--<li><a href="registration.html">Registration</a></li>-->
                             <li class="divider"></li>
                             <li><a href="privacy.html">Privacy Policy</a></li>
                             <li><a href="terms.html">Terms of Use</a></li>
                         </ul>
                     </li>
-                    <li><a href="blog.html">Blog</a></li> 
+                    <li><a href="Blog.html">Blog</a></li> 
                     <li><a href="Contacto.html">Contacto</a></li>
                 </ul>
             </div>
@@ -131,8 +131,8 @@
                             <i class="icon-twitter icon-md"></i>
                         </div>
                         <div class="media-body">
-                            <h3 class="media-heading">Twitter Marketing</h3>
-                            <p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae.</p>
+                            <h3 class="media-heading">Twitter </h3>
+                            <p>Siguenos.</p>
                         </div>
                     </div>
                 </div><!--/.col-md-4-->
@@ -142,8 +142,8 @@
                             <i class="icon-facebook icon-md"></i>
                         </div>
                         <div class="media-body">
-                            <h3 class="media-heading">Facebook Marketing</h3>
-                            <p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae.</p>
+                            <h3 class="media-heading">Facebook </h3>
+                            <p>Siguenos.</p>
                         </div>
                     </div>
                 </div><!--/.col-md-4-->
@@ -153,8 +153,8 @@
                             <i class="icon-google-plus icon-md"></i>
                         </div>
                         <div class="media-body">
-                            <h3 class="media-heading">Google Plus Marketing</h3>
-                            <p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae.</p>
+                            <h3 class="media-heading">Google Plus </h3>
+                            <p>Siguenos.</p>
                         </div>
                     </div>
                 </div><!--/.col-md-4-->
