--- a/Nosotros.html
+++ b/Nosotros.html
@@ -31,29 +31,29 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="index.html"><img src="images/logo.png" alt="logo"></a>
+                <a class="navbar-brand" href="Index.html"><img src="images/logo.png" alt="logo"></a>
             </div>
             <div class="collapse navbar-collapse">
                 <ul class="nav navbar-nav navbar-right">
-                    <li><a href="index.html">Home</a></li>
+                    <li><a href="Index.html">Home</a></li>
                     <li class="active"><a href="Nosotros.html">Nosotros</a></li>
-                    <li><a href="services.html">Servicios</a></li>
-                    <li><a href="portfolio.html">Portfolio</a></li>
+                    <li><a href="Servicios.html">Servicios</a></li>
+                    <li><a href="Portfolio.html">Portfolio</a></li>
                     <li class="dropdown">
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">Pages <i class="icon-angle-down"></i></a>
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">Catalogo <i class="icon-angle-down"></i></a>
                         <ul class="dropdown-menu">
-                            <li><a href="career.html">Career</a></li>
-                            <li><a href="blog-item.html">Blog Single</a></li>
-                            <li><a href="faq.html">FAQ</a></li>
+                            <li><a href="career.html">Juegos Infantiles</a></li>
+                            <li><a href="blog-item.html">Desportes y Ejercicios</a></li>
+                            <li><a href="faq.html">Moviliario Urbano</a></li>
                             <li><a href="pricing.html">Pricing</a></li>
                             <li><a href="404.html">404</a></li>
-                            <li><a href="registration.html">Registration</a></li>
+                            <!--<li><a href="registration.html">Registration</a></li>-->
                             <li class="divider"></li>
                             <li><a href="privacy.html">Privacy Policy</a></li>
                             <li><a href="terms.html">Terms of Use</a></li>
                         </ul>
                     </li>
-                    <li><a href="blog.html">Blog</a></li> 
+                    <li><a href="Blog.html">Blog</a></li> 
                     <li><a href="Contacto.html">Contacto</a></li>
                 </ul>
             </div>
@@ -246,7 +246,7 @@
                 </div>
                 <div class="col-sm-6">
                     <ul class="pull-right">
-                        <li><a href="index.html">Home</a></li>
+                        <li><a href="Index.html">Home</a></li>
                         <li><a href="#">Nosotros</a></li>
                         <!--<li><a href="#">Faq</a></li>-->
                         <li><a href="Contacto.html">Contacto</a></li>
