--- a/Portfolio.html
+++ b/Portfolio.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
     <meta name="author" content="">
-    <title>Servicios | Metal Jardin</title>
+    <title>Portfolio | Metal Jardin</title>
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/font-awesome.min.css" rel="stylesheet">
     <link href="css/prettyPhoto.css" rel="stylesheet">
@@ -31,29 +31,29 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="index.html"><img src="images/logo.png" alt="logo"></a>
+                <a class="navbar-brand" href="Index.html"><img src="images/logo.png" alt="logo"></a>
             </div>
             <div class="collapse navbar-collapse">
                 <ul class="nav navbar-nav navbar-right">
-                    <li><a href="index.html">Home</a></li>
+                    <li><a href="Index.html">Home</a></li>
                     <li><a href="Nosotros.html">Nosotros</a></li>
-                    <li class="active"><a href="services.html">Servicios</a></li>
-                    <li><a href="portfolio.html">Portfolio</a></li>
+                    <li><a href="Servicios.html">Servicios</a></li>
+                    <li class="active"><a href="Portfolio.html">Portfolio</a></li>
                     <li class="dropdown">
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">Pages <i class="icon-angle-down"></i></a>
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">Catalogo <i class="icon-angle-down"></i></a>
                         <ul class="dropdown-menu">
-                            <li><a href="career.html">Career</a></li>
-                            <li><a href="blog-item.html">Blog Single</a></li>
-                            <li><a href="faq.html">FAQ</a></li>
+                            <li><a href="career.html">Juegos Infantiles</a></li>
+                            <li><a href="blog-item.html">Desportes y Ejercicios</a></li>
+                            <li><a href="faq.html">Moviliario Urbano</a></li>
                             <li><a href="pricing.html">Pricing</a></li>
                             <li><a href="404.html">404</a></li>
-                            <li><a href="registration.html">Registration</a></li>
+                            <!--<li><a href="registration.html">Registration</a></li>-->
                             <li class="divider"></li>
                             <li><a href="privacy.html">Privacy Policy</a></li>
                             <li><a href="terms.html">Terms of Use</a></li>
                         </ul>
                     </li>
-                    <li><a href="blog.html">Blog</a></li> 
+                    <li><a href="Blog.html">Blog</a></li> 
                     <li><a href="Contacto.html">Contacto</a></li>
                 </ul>
             </div>
@@ -64,126 +64,84 @@
         <div class="container">
             <div class="row">
                 <div class="col-sm-6">
-                    <h1>Services</h1>
+                    <h1>Portfolio</h1>
                     <p>Pellentesque habitant morbi tristique senectus et netus et malesuada</p>
                 </div>
                 <div class="col-sm-6">
                     <ul class="breadcrumb pull-right">
                         <li><a href="index.html">Home</a></li>
-                        <li class="active">Services</li>
+                        <li class="active">Portfolio</li>
                     </ul>
                 </div>
             </div>
         </div>
-    </section>/#title     -->
+    </section>/#title -->
 
-    <section id="services">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-12">
-                    <div class="center gap">
-                        <h2>What we do</h2>
-                        <p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.</p>
-                    </div>                
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-md-4 col-sm-6">
-                    <div class="media">
-                        <div class="pull-left">
-                            <i class="icon-windows icon-md"></i>
-                        </div>
-                        <div class="media-body">
-                            <h3 class="media-heading">Windows Development</h3>
-                            <p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae.</p>
-                        </div>
-                    </div>
-                </div><!--/.col-md-4-->
-                <div class="col-md-4 col-sm-6">
-                    <div class="media">
-                        <div class="pull-left">
-                            <i class="icon-android icon-md"></i>
-                        </div>
-                        <div class="media-body">
-                            <h3 class="media-heading">Android Development</h3>
-                            <p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae.</p>
-                        </div>
-                    </div>
-                </div><!--/.col-md-4-->
-                <div class="col-md-4 col-sm-6">
-                    <div class="media">
-                        <div class="pull-left">
-                            <i class="icon-apple icon-md"></i>
-                        </div>
-                        <div class="media-body">
-                            <h3 class="media-heading">iOS Development</h3>
-                            <p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae.</p>
-                        </div>
-                    </div>
-                </div><!--/.col-md-4-->
-            </div><!--/.row-->
-            <div class="gap"></div>
-            <div class="row">
-                <div class="col-md-4 col-sm-6">
-                    <div class="media">
-                        <div class="pull-left">
-                            <i class="icon-linux icon-md"></i>
-                        </div>
-                        <div class="media-body">
-                            <h3 class="media-heading">Linux Development</h3>
-                            <p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae.</p>
-                        </div>
-                    </div>
-                </div><!--/.col-md-4-->
-                <div class="col-md-4 col-sm-6">
-                    <div class="media">
-                        <div class="pull-left">
-                            <i class="icon-dribbble icon-md"></i>
-                        </div>
-                        <div class="media-body">
-                            <h3 class="media-heading">Graphic Design</h3>
-                            <p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae.</p>
-                        </div>
-                    </div>
-                </div><!--/.col-md-4-->
-                <div class="col-md-4 col-sm-6">
-                    <div class="media">
-                        <div class="pull-left">
-                            <i class="icon-google-plus icon-md"></i>
-                        </div>
-                        <div class="media-body">
-                            <h3 class="media-heading">SEO Services</h3>
-                            <p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae.</p>
-                        </div>
-                    </div>
-                </div><!--/.col-md-4-->
-            </div><!--/.row-->
-            <hr>
-            <div class="row">
-                <div class="col-lg-12">
-                    <div class="center">
-                        <h2>What our clients say</h2>
-                        <p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.</p>
-                    </div>
-                    <div class="gap"></div>
-                    <div class="row">
-                        <div class="col-md-6">
-                            <blockquote>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.</p>
-                                <small>Someone famous in <cite title="Source Title">Source Title</cite></small>
-                            </blockquote>
-                        </div>
-                        <div class="col-md-6">
-                            <blockquote>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.</p>
-                                <small>Someone famous in <cite title="Source Title">Source Title</cite></small>
-                            </blockquote>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section><!--/#services-->
+    <section id="portfolio" class="container">
+        <ul class="portfolio-filter">
+            <li><a class="btn btn-default active" href="#" data-filter="*">Todas</a></li>
+            <li><a class="btn btn-default" href="#" data-filter=".bootstrap">Bootstrap</a></li>
+            <li><a class="btn btn-default" href="#" data-filter=".html">HTML</a></li>
+            <li><a class="btn btn-default" href="#" data-filter=".wordpress">Wordpress</a></li>
+        </ul><!--/#portfolio-filter-->
+
+        <ul class="portfolio-items col-3">
+            <li class="portfolio-item html">
+                <div class="item-inner">
+                    <img src="images/portfolio/thumb/item1.jpg" alt="">
+                    <h5>Lorem ipsum dolor sit amet</h5>
+                    <div class="overlay">
+                        <a class="preview btn btn-danger" href="images/portfolio/full/item1.jpg" rel="prettyPhoto"><i class="icon-eye-open"></i></a>             
+                    </div>           
+                </div>           
+            </li><!--/.portfolio-item-->
+            <li class="portfolio-item bootstrap">
+                <div class="item-inner">
+                    <img src="images/portfolio/thumb/item2.jpg" alt="">
+                    <h5>Lorem ipsum dolor sit amet</h5>
+                    <div class="overlay">
+                        <a class="preview btn btn-danger" href="images/portfolio/full/item2.jpg" rel="prettyPhoto"><i class="icon-eye-open"></i></a>              
+                    </div>           
+                </div>           
+            </li><!--/.portfolio-item-->
+            <li class="portfolio-item bootstrap">
+                <div class="item-inner">
+                    <img src="images/portfolio/thumb/item3.jpg" alt="">
+                    <h5>Lorem ipsum dolor sit amet</h5>
+                    <div class="overlay">
+                        <a class="preview btn btn-danger" href="images/portfolio/full/item3.jpg" rel="prettyPhoto"><i class="icon-eye-open"></i></a>        
+                    </div>           
+                </div>           
+            </li><!--/.portfolio-item-->
+            <li class="portfolio-item wordpress">
+                <div class="item-inner">
+                    <img src="images/portfolio/thumb/item4.jpg" alt="">
+                    <h5>Lorem ipsum dolor sit amet</h5>
+                    <div class="overlay">
+                        <a class="preview btn btn-danger" href="images/portfolio/full/item4.jpg" rel="prettyPhoto"><i class="icon-eye-open"></i></a>          
+                    </div>           
+                </div>           
+            </li><!--/.portfolio-item-->
+            <li class="portfolio-item html">
+                <div class="item-inner">
+                    <img src="images/portfolio/thumb/item5.jpg" alt="">
+                    <h5>Lorem ipsum dolor sit amet</h5>
+                    <div class="overlay">
+                        <a class="preview btn btn-danger" href="images/portfolio/full/item5.jpg" rel="prettyPhoto"><i class="icon-eye-open"></i></a>          
+                    </div>    
+                </div>       
+            </li><!--/.portfolio-item-->
+            <li class="portfolio-item html">
+                <div class="item-inner">
+                    <img src="images/portfolio/thumb/item6.jpg" alt="">
+                    <h5>Lorem ipsum dolor sit amet</h5>
+                    <div class="overlay">
+                        <a class="preview btn btn-danger" href="images/portfolio/full/item6.jpg" rel="prettyPhoto"><i class="icon-eye-open"></i></a>           
+                    </div>           
+                </div>           
+            </li><!--/.portfolio-item-->
+        </ul>
+    </section><!--/#portfolio-->
 
 <!--    <section id="bottom" class="wet-asphalt">
         <div class="container">
@@ -274,7 +232,7 @@
                 </div>
                 <div class="col-sm-6">
                     <ul class="pull-right">
-                        <li><a href="index.html">Home</a></li>
+                        <li><a href="Index.html">Home</a></li>
                         <li><a href="Nosotros.html">Nosotros</a></li>
                         <!--<li><a href="#">Faq</a></li>-->
                         <li><a href="Contacto.html">Contacto</a></li>
@@ -288,6 +246,7 @@
     <script src="js/jquery.js"></script>
     <script src="js/bootstrap.min.js"></script>
     <script src="js/jquery.prettyPhoto.js"></script>
+    <script src="js/jquery.isotope.min.js"></script>
     <script src="js/main.js"></script>
 </body>
 </html>
