--- a/career.html
+++ b/career.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="">
   <meta name="author" content="">
-  <title>Career | Flat Theme</title>
+  <title>Career | Metal Juegos</title>
   <link href="css/bootstrap.min.css" rel="stylesheet">
   <link href="css/font-awesome.min.css" rel="stylesheet">
   <link href="css/prettyPhoto.css" rel="stylesheet">
@@ -31,36 +31,36 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="index.html"><img src="images/logo.png" alt="logo"></a>
+        <a class="navbar-brand" href="Index.html"><img src="images/logo.png" alt="logo"></a>
       </div>
       <div class="collapse navbar-collapse">
         <ul class="nav navbar-nav navbar-right">
-          <li><a href="index.html">Home</a></li>
+          <li><a href="Index.html">Home</a></li>
           <li><a href="Nosotros.html">About Us</a></li>
-          <li><a href="services.html">Services</a></li>
-          <li><a href="portfolio.html">Portfolio</a></li>
+          <li><a href="Servicios.html">Services</a></li>
+          <li><a href="Portfolio.html">Portfolio</a></li>
           <li class="dropdown active">
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown">Pages <i class="icon-angle-down"></i></a>
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown">Catalogo <i class="icon-angle-down"></i></a>
             <ul class="dropdown-menu">
-              <li class="active"><a href="career.html">Career</a></li>
-              <li><a href="blog-item.html">Blog Single</a></li>
-              <li><a href="faq.html">FAQ</a></li>
+              <li class="active"><a href="career.html">Juegos Infantiles</a></li>
+              <li><a href="blog-item.html">Desportes y Ejercicios</a></li>
+              <li><a href="faq.html">Moviliario Urbano</a></li>
               <li><a href="pricing.html">Pricing</a></li>
               <li><a href="404.html">404</a></li>
-              <li><a href="registration.html">Registration</a></li>
+              <!--<li><a href="registration.html">Registration</a></li>-->
               <li class="divider"></li>
               <li><a href="privacy.html">Privacy Policy</a></li>
               <li><a href="terms.html">Terms of Use</a></li>
             </ul>
           </li>
-          <li><a href="blog.html">Blog</a></li> 
+          <li><a href="Blog.html">Blog</a></li> 
           <li><a href="Contacto.html">Contact</a></li>
         </ul>
       </div>
     </div>
   </header><!--/header-->
 
-  <section id="title" class="emerald">
+<!--  <section id="title" class="emerald">
     <div class="container">
       <div class="row">
         <div class="col-sm-6">
@@ -69,14 +69,14 @@
         </div>
         <div class="col-sm-6">
           <ul class="breadcrumb pull-right">
-            <li><a href="index.html">Home</a></li>
+            <li><a href="Index.html">Home</a></li>
             <li><a href="#">Pages</a></li>
             <li class="active">Career</li>
           </ul>
         </div>
       </div>
     </div>
-  </section><!--/#title-->     
+  </section>/#title     -->
 
   <section id="career" class="container">
     <div class="center">
@@ -241,14 +241,14 @@
   </section>
   <!-- /Career -->
 
-  <section id="bottom" class="wet-asphalt">
+<!--  <section id="bottom" class="wet-asphalt">
     <div class="container">
       <div class="row">
         <div class="col-md-3 col-sm-6">
           <h4>About Us</h4>
           <p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante.</p>
           <p>Pellentesque habitant morbi tristique senectus.</p>
-        </div><!--/.col-md-3-->
+        </div>/.col-md-3
 
         <div class="col-md-3 col-sm-6">
           <h4>Company</h4>
@@ -265,7 +265,7 @@
               <li><a href="#">Copyright</a></li>
             </ul>
           </div>
-        </div><!--/.col-md-3-->
+        </div>/.col-md-3
 
         <div class="col-md-3 col-sm-6">
           <h4>Latest Blog</h4>
@@ -298,7 +298,7 @@
               </div>
             </div>
           </div>  
-        </div><!--/.col-md-3-->
+        </div>/.col-md-3
 
         <div class="col-md-3 col-sm-6">
           <h4>Address</h4>
@@ -317,10 +317,10 @@
               </span>
             </div>
           </form>
-        </div> <!--/.col-md-3-->
+        </div> /.col-md-3
       </div>
     </div>
-  </section><!--/#bottom-->
+  </section>/#bottom-->
 
   <footer id="footer" class="midnight-blue">
     <div class="container">
