--- a/privacy.html
+++ b/privacy.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
     <meta name="author" content="">
-    <title>Privacy Policy | Flat Theme</title>
+    <title>Privacy Policy | Metal Juegos</title>
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/font-awesome.min.css" rel="stylesheet">
     <link href="css/prettyPhoto.css" rel="stylesheet">
@@ -31,14 +31,14 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="index.html"><img src="images/logo.png" alt="logo"></a>
+                <a class="navbar-brand" href="Index.html"><img src="images/logo.png" alt="logo"></a>
             </div>
             <div class="collapse navbar-collapse">
                 <ul class="nav navbar-nav navbar-right">
-                    <li><a href="index.html">Home</a></li>
+                    <li><a href="Index.html">Home</a></li>
                     <li><a href="Nosotros.html">About Us</a></li>
-                    <li><a href="services.html">Services</a></li>
-                    <li><a href="portfolio.html">Portfolio</a></li>
+                    <li><a href="Servicios.html">Services</a></li>
+                    <li><a href="Portfolio.html">Portfolio</a></li>
                     <li class="dropdown active">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">Pages <i class="icon-angle-down"></i></a>
                         <ul class="dropdown-menu">
@@ -53,14 +53,14 @@
                             <li><a href="terms.html">Terms of Use</a></li>
                         </ul>
                     </li>
-                    <li><a href="blog.html">Blog</a></li> 
+                    <li><a href="Blog.html">Blog</a></li> 
                     <li><a href="Contacto.html">Contact</a></li>
                 </ul>
             </div>
         </div>
     </header><!--/header-->
 
-    <section id="title" class="emerald">
+<!--    <section id="title" class="emerald">
         <div class="container">
             <div class="row">
                 <div class="col-sm-6">
@@ -69,14 +69,14 @@
                 </div>
                 <div class="col-sm-6">
                     <ul class="breadcrumb pull-right">
-                        <li><a href="index.html">Home</a></li>
+                        <li><a href="Index.html">Home</a></li>
                         <li><a href="#">Pages</a></li>
                         <li class="active">Privacy Policy</li>
                     </ul>
                 </div>
             </div>
         </div>
-    </section><!--/#title--> 
+    </section>/#title -->
 
     <section id="privacy-policy" class="container">
         <h3>Introduction</h3>
@@ -102,14 +102,14 @@
         <p>&nbsp;</p>
     </section><!--/#privacy-policy-->
 
-    <section id="bottom" class="wet-asphalt">
+<!--    <section id="bottom" class="wet-asphalt">
         <div class="container">
             <div class="row">
                 <div class="col-md-3 col-sm-6">
                     <h4>About Us</h4>
                     <p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante.</p>
                     <p>Pellentesque habitant morbi tristique senectus.</p>
-                </div><!--/.col-md-3-->
+                </div>/.col-md-3
 
                 <div class="col-md-3 col-sm-6">
                     <h4>Company</h4>
@@ -126,7 +126,7 @@
                             <li><a href="#">Copyright</a></li>
                         </ul>
                     </div>
-                </div><!--/.col-md-3-->
+                </div>/.col-md-3
 
                 <div class="col-md-3 col-sm-6">
                     <h4>Latest Blog</h4>
@@ -159,7 +159,7 @@
                             </div>
                         </div>
                     </div>  
-                </div><!--/.col-md-3-->
+                </div>/.col-md-3
 
                 <div class="col-md-3 col-sm-6">
                     <h4>Address</h4>
@@ -178,10 +178,10 @@
                             </span>
                         </div>
                     </form>
-                </div> <!--/.col-md-3-->
+                </div> /.col-md-3
             </div>
         </div>
-    </section><!--/#bottom-->
+    </section>/#bottom-->
 
     <footer id="footer" class="midnight-blue">
         <div class="container">
