--- a/Deportes.html
+++ b/Deportes.html
@@ -45,25 +45,25 @@
             <div class="collapse navbar-collapse">
                 <ul class="nav navbar-nav navbar-right">
                     <li><a href="Index.html">Home</a></li>
-                    <li><a href="Nosotros.html">About Us</a></li>
-                    <li><a href="Servicios.html">Services</a></li>
+                    <li><a href="Nosotros.html">Nosotros</a></li>
+                    <li><a href="Servicios.html">Servicios</a></li>
                     <li><a href="Portfolio.html">Portfolio</a></li>
                     <li class="dropdown active">
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">Pages <i class="icon-angle-down"></i></a>
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">Catalogo <i class="icon-angle-down"></i></a>
                         <ul class="dropdown-menu">
-                            <li><a href="career.html">Career</a></li>
-                            <li class="active"><a href="blog-item.html">Blog Single</a></li>
-                            <li><a href="faq.html">FAQ</a></li>
-                            <li><a href="pricing.html">Pricing</a></li>
+                            <li><a href="Juegos.html">Juegos Infantiles</a></li>
+                            <li class="active"><a href="Deportes.html">Deportes y Ejercicios</a></li>
+                            <li><a href="Moviliario.html">Moviliario Urbano</a></li>
+<!--                            <li><a href="pricing.html">Pricing</a></li>
                             <li><a href="404.html">404</a></li>
-                            <li><a href="registration.html">Registration</a></li>
+                            <li><a href="registratiBlog Singleon.html">Registration</a></li>-->
                             <li class="divider"></li>
                             <li><a href="privacy.html">Privacy Policy</a></li>
                             <li><a href="terms.html">Terms of Use</a></li>
                         </ul>
                     </li>
                     <li><a href="Blog.html">Blog</a></li> 
-                    <li><a href="Contacto.html">Contact</a></li>
+                    <li><a href="Contacto.html">Contacto</a></li>
                 </ul>
             </div>
         </div>
@@ -371,10 +371,10 @@
                 </div>
                 <div class="col-sm-6">
                     <ul class="pull-right">
-                        <li><a href="#">Home</a></li>
-                        <li><a href="#">About Us</a></li>
-                        <li><a href="#">Faq</a></li>
-                        <li><a href="#">Contact Us</a></li>
+                        <li><a href="Index.html">Home</a></li>
+                        <li><a href="Nosotros.html">Nosotros</a></li>
+                        <!--<li><a href="#">Faq</a></li>-->
+                        <li><a href="Contacto.html">Contacto</a></li>
                         <li><a id="gototop" class="gototop" href="#"><i class="icon-chevron-up"></i></a></li><!--#gototop-->
                     </ul>
                 </div>
