--- a/Moviliario.html
+++ b/Moviliario.html
@@ -42,12 +42,12 @@
                     <li class="dropdown active">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">Pages <i class="icon-angle-down"></i></a>
                         <ul class="dropdown-menu">
-                            <li><a href="career.html">Juegos Infantiles</a></li>
-                            <li class="active"><a href="blog-item.html">Desportes y Ejercicios</a></li>
-                            <li><a href="faq.html">Moviliario Urbano</a></li>
-                            <li><a href="pricing.html">Pricing</a></li>
+                            <li><a href="Juegos.html">Juegos Infantiles</a></li>
+                            <li class="active"><a href="Deportes.html">Desportes y Ejercicios</a></li>
+                            <li><a href="Moviliario.html">Moviliario Urbano</a></li>
+<!--                            <li><a href="pricing.html">Pricing</a></li>
                             <li><a href="404.html">404</a></li>
-                            <li><a href="registration.html">Registration</a></li>
+                            <li><a href="registration.html">Registration</a></li>-->
                             <li class="divider"></li>
                             <li><a href="privacy.html">Privacy Policy</a></li>
                             <li><a href="terms.html">Terms of Use</a></li>
@@ -214,10 +214,10 @@
                 </div>
                 <div class="col-sm-6">
                     <ul class="pull-right">
-                        <li><a href="#">Home</a></li>
-                        <li><a href="#">About Us</a></li>
-                        <li><a href="#">Faq</a></li>
-                        <li><a href="#">Contact Us</a></li>
+                        <li><a href="Index.html">Home</a></li>
+                        <li><a href="Nosotros.html">Nosotros</a></li>
+                        <!--<li><a href="#">Faq</a></li>-->
+                        <li><a href="#">Contacto</a></li>
                         <li><a id="gototop" class="gototop" href="#"><i class="icon-chevron-up"></i></a></li><!--#gototop-->
                     </ul>
                 </div>
