--- a/Index.html
+++ b/Index.html
@@ -42,10 +42,11 @@
                     <li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">Catalogo <i class="icon-angle-down"></i></a>
                         <ul class="dropdown-menu">
-                            <li><a href="career.html">Juegos Infantiles</a></li>
-                            <li><a href="blog-item.html">Desportes y Ejercicios</a></li>
-                            <li><a href="faq.html">Moviliario Urbano</a></li>
-                            <li><a href="404.html">404</a></li>
+                            <li><a href="Juegos.html">Juegos Infantiles</a></li>
+                            <li><a href="Deportes.html">Desportes y Ejercicios</a></li>
+                            <li><a href="Moviliario.html">Moviliario Urbano</a></li>
+<!--                            <li><a href="pricing.html">Pricing</a></li>
+                            <li><a href="404.html">404</a></li>-->
                             <!--<li><a href="registration.html">Registration</a></li>-->
                             <li class="divider"></li>
                             <li><a href="privacy.html">Privacy Policy</a></li>
