--- a/Juegos.html
+++ b/Juegos.html
@@ -42,11 +42,11 @@
           <li class="dropdown active">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown">Catalogo <i class="icon-angle-down"></i></a>
             <ul class="dropdown-menu">
-              <li class="active"><a href="career.html">Juegos Infantiles</a></li>
-              <li><a href="blog-item.html">Desportes y Ejercicios</a></li>
-              <li><a href="faq.html">Moviliario Urbano</a></li>
-              <li><a href="pricing.html">Pricing</a></li>
-              <li><a href="404.html">404</a></li>
+              <li class="active"><a href="Juegos.html">Juegos Infantiles</a></li>
+              <li><a href="Deportes.html">Desportes y Ejercicios</a></li>
+              <li><a href="Moviliario.html">Moviliario Urbano</a></li>
+<!--              <li><a href="pricing.html">Pricing</a></li>
+              <li><a href="404.html">404</a></li>-->
               <!--<li><a href="registration.html">Registration</a></li>-->
               <li class="divider"></li>
               <li><a href="privacy.html">Privacy Policy</a></li>
@@ -330,10 +330,10 @@
         </div>
         <div class="col-sm-6">
           <ul class="pull-right">
-            <li><a href="#">Home</a></li>
-            <li><a href="#">About Us</a></li>
-            <li><a href="#">Faq</a></li>
-            <li><a href="#">Contact Us</a></li>
+            <li><a href="Index.html">Home</a></li>
+            <li><a href="Nostros.html">Nosotros</a></li>
+            <!--<li><a href="#">Faq</a></li>-->
+            <li><a href="Contacto.html">Contacto</a></li>
             <li><a id="gototop" class="gototop" href="#"><i class="icon-chevron-up"></i></a></li><!--#gototop-->
           </ul>
         </div>
