--- a/privacy.html
+++ b/privacy.html
@@ -42,9 +42,9 @@
                     <li class="dropdown active">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">Pages <i class="icon-angle-down"></i></a>
                         <ul class="dropdown-menu">
-                            <li><a href="career.html">Career</a></li>
-                            <li><a href="blog-item.html">Blog Single</a></li>
-                            <li><a href="faq.html">FAQ</a></li>
+                            <li><a href="Juegos.html">Career</a></li>
+                            <li><a href="Deportes.html">Blog Single</a></li>
+                            <li><a href="Moviliario.html">FAQ</a></li>
                             <li><a href="pricing.html">Pricing</a></li>
                             <li><a href="404.html">404</a></li>
                             <li><a href="registration.html">Registration</a></li>
