--- a/Garantia.html
+++ b/Garantia.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
     <meta name="author" content="">
-    <title>Pricing | Metal Juegos</title>
+    <title>Garantia | Metal Plaza</title>
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/font-awesome.min.css" rel="stylesheet">
     <link href="css/prettyPhoto.css" rel="stylesheet">
@@ -90,6 +90,7 @@
         <p>&nbsp;</p>
     </section><!--/#privacy-policy-->
 
+    <div style="height:80px; width: 1024px"></div>
 
     <footer id="footer" class="midnight-blue">
         <div class="container">
