--- a/Deportes.html
+++ b/Deportes.html
@@ -51,7 +51,7 @@
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">Servicios <i class="icon-angle-down"></i></a>
                         <ul class="dropdown-menu">
                             <li><a href="#.html">Intalacion</a></li>
-                            <li><a href="#.html">Garantia</a></li>
+                            <li><a href="Garantia.html">Garantia</a></li>
                         </ul>
                     </li>
                     <li><a href="Portfolio.html">Portfolio</a></li>
