--- a/Garantia.html
+++ b/Garantia.html
@@ -37,12 +37,12 @@
                     <!--<li><a href="Servicios.html">Servicios</a></li>-->
                     <li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">Servicios <i class="icon-angle-down"></i></a>
-                        <ul class="dropdown-menu">
-                            <li><a href="#.html">Instalacion</a></li>
-                            <li><a href="Garantia.html">Garantia</a></li>
-                        </ul>
+                            <ul class="dropdown-menu">
+                                <li><a href="#.html">Instalacion</a></li>
+                                <li class="active"><a href="Garantia.html">Garantia</a></li>
+                            </ul>
                     </li>
-                    <li class="active"><a href="Portfolio.html">Portfolio</a></li>
+                    <li><a href="Portfolio.html">Portfolio</a></li>
                     <li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">Catalogo <i class="icon-angle-down"></i></a>
                         <ul class="dropdown-menu">
