--- a/Juegos.html
+++ b/Juegos.html
@@ -39,12 +39,12 @@
           <li><a href="Nosotros.html">Nosotros</a></li>
           <!--<li><a href="Servicios.html">Servicios</a></li>-->
           <li class="dropdown">
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">Servicios <i class="icon-angle-down"></i></a>
-                        <ul class="dropdown-menu">
-                            <li><a href="#.html">Intalacion</a></li>
-                            <li><a href="#.html">Garantia</a></li>
-                        </ul>
-                    </li>
+                <a href="#" class="dropdown-toggle" data-toggle="dropdown">Servicios <i class="icon-angle-down"></i></a>
+                <ul class="dropdown-menu">
+                    <li><a href="#.html">Intalacion</a></li>
+                    <li><a href="Garantia.html">Garantia</a></li>
+                </ul>
+          </li>
           <li><a href="Portfolio.html">Portfolio</a></li>
           <li class="dropdown active">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown">Catalogo <i class="icon-angle-down"></i></a>
