--- a/Contacto.html
+++ b/Contacto.html
@@ -94,6 +94,8 @@
         </div>
     </section><!--/#contact-page-->
     
+    <div style="height:15px; width: 1024px"></div>
+    
     <footer id="footer" class="midnight-blue">
         <div class="container">
             <div class="row">
