--- a/Garantia.html
+++ b/Garantia.html
@@ -34,7 +34,7 @@
                 <ul class="nav navbar-nav navbar-right">
                     <li><a href="index.html">Home</a></li>
                     <li><a href="Nosotros.html">Nosotros</a></li>
-                    <li class="dropdown">
+                    <li class="dropdown active">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">Servicios <i class="icon-angle-down"></i></a>
                             <ul class="dropdown-menu">
                                 <li><a href="#.html">Instalacion</a></li>
@@ -82,7 +82,7 @@
         <p>&nbsp;</p>
     </section><!--/#privacy-policy-->
 
-    <div style="height:80px; width: 1024px"></div>
+    <div style="height:140px; width: 1024px"></div>
 
     <footer id="footer" class="midnight-blue">
         <div class="container">
