--- a/Contacto.html
+++ b/Contacto.html
@@ -46,14 +46,15 @@
                         </ul>
                     </li>
                     <li><a href="Portfolio.html">Portfolio</a></li>
-                    <li class="dropdown">
+                    <li><a href="Catalogo.html">Catalogo</a></li>
+<!--                    <li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">Catalogo <i class="icon-angle-down"></i></a>
                         <ul class="dropdown-menu">
-                            <li><a href="Juegos.html">Juegos Infantiles</a></li>
+                            <li><a href="Catalogo.html">Juegos Infantiles</a></li>
                             <li><a href="Deportes.html">Deportes y Ejercicios</a></li>
                             <li><a href="Moviliario.html">Moviliario Urbano</a></li>
                         </ul>
-                    </li>
+                    </li>-->
                     <li class="active"><a href="Contacto.html">Contacto</a></li>
                 </ul>
             </div>
