--- a/index.html
+++ b/index.html
@@ -45,14 +45,15 @@
                         </ul>
                     </li>
                     <li><a href="Portfolio.html">Portfolio</a></li>
-                    <li class="dropdown">
+                    <li><a href="Catalogo.html">Catalogo</a></li>                    
+<!--                    <li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">Catalogo <i class="icon-angle-down"></i></a>
                         <ul class="dropdown-menu">
                             <li><a href="Juegos1.html">Juegos Infantiles</a></li>
                             <li><a href="Deportes.html">Desportes y Ejercicios</a></li>
                             <li><a href="Moviliario.html">Moviliario Urbano</a></li>
                         </ul>
-                    </li>
+                    </li>-->
                     <li><a href="Contacto.html">Contacto</a></li>
                 </ul>
             </div>
@@ -66,24 +67,24 @@
                 <li data-target="#main-slider" data-slide-to="2"></li>
             </ol>
             <div class="carousel-inner">
-                <div class="item active" style="background-image: url(images/slider/bg1.jpg)">
+                <div class="item active" style="background-image: url(images/slider/MetalPlaza-Juegos01.jpg)">
                     <div class="container">
                         <div class="row">
                             <div class="col-sm-12">
                                 <div class="carousel-content centered">
-                                    <h2 class="animation animated-item-1">Powerful and Responsive Web Design</h2>
+                                    <h2 class="animation animated-item-1">Creando Diversion</h2>
                                     <p class="animation animated-item-2">Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.</p>
                                 </div>
                             </div>
                         </div>
                     </div>
                 </div><!--/.item-->
-                <div class="item" style="background-image: url(images/slider/bg2.jpg)">
+                <div class="item" style="background-image: url(images/slider/MetalPlaza-Juegos02.jpg)">
                     <div class="container">
                         <div class="row">
                             <div class="col-sm-12">
                                 <div class="carousel-content center centered">
-                                    <h2 class="boxed animation animated-item-1">Clean, Crisp, Powerful and Responsive Web Design</h2>
+                                    <h2 class="boxed animation animated-item-1">Creando Diversion</h2>
                                     <p class="boxed animation animated-item-2">Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.</p>
                                     <br>
                                     <a class="btn btn-md animation animated-item-3" href="#">Learn More</a>
@@ -135,7 +136,7 @@
                             <p>Siguenos.</p>
                         </div>
                     </div>
-                </div><!--/.col-md-4-->
+                </div>
                 <div class="col-md-4 col-sm-6">
                     <div class="media">
                         <div class="pull-left">
@@ -146,7 +147,7 @@
                             <p>Siguenos.</p>
                         </div>
                     </div>
-                </div><!--/.col-md-4-->
+                </div>
                 <div class="col-md-4 col-sm-6">
                     <div class="media">
                         <div class="pull-left">
@@ -157,10 +158,11 @@
                             <p>Siguenos.</p>
                         </div>
                     </div>
-                </div><!--/.col-md-4-->
-            </div>
+                </div>
         </div>
-    </section><!--/#services-->
+    </section>
+
+
 
     <footer id="footer" class="midnight-blue">
         <div class="container">
