--- a/Catalogo.html
+++ b/Catalogo.html
@@ -45,14 +45,15 @@
                 </ul>
           </li>
           <li><a href="Portfolio.html">Portfolio</a></li>
-          <li class="dropdown active">
+          <li class="active"><a href="Catalogo.html">Catalogo</a></li>
+<!--          <li class="dropdown active">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown">Catalogo <i class="icon-angle-down"></i></a>
             <ul class="dropdown-menu">
-              <li class="active"><a href="Juegos.html">Juegos Infantiles</a></li>
+              <li class="active"><a href="Catalogo.html">Juegos Infantiles</a></li>
               <li><a href="Deportes.html">Desportes y Ejercicios</a></li>
               <li><a href="Moviliario.html">Moviliario Urbano</a></li>
             </ul>
-          </li>
+          </li>-->
           <li><a href="Contacto.html">Contacto</a></li>
         </ul>
       </div>
